<resources>
    <string name="app_name">Fetch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">928219673905619</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="login_desc">Login With Facebook</string>
    <string name="logout_desc">Logout From Facebook</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_event">Create New Event</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Calendar</item>
        <item>Pictures</item>
        <item>Notifications</item>
        <item>Events</item>
        <item>Import Events</item>
        <item>Voting Results</item>
    </string-array>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Colours for Event List -->
    <string-array name="event_bg">
        <item>#24c6d5</item>
        <item>#57dd86</item>
        <item>#ad7dcf</item>
        <item>#ff484d</item>
        <item>#fcba59</item>
        <item>#24c6d5</item>
    </string-array>

    <!-- activity_event.xml -->
    <string name="event_title">Title</string>
    <string name="event_location">Location</string>
    <string name="event_every">Every</string>
    <string name="event_remind">Remind me</string>
    <string name="event_notes">Notes</string>
    <string name="event_participants">Participants</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="event_empty">X</string>

    <!-- activity_login.xml -->
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_registration">Register Here</string>

    <!-- activity_logout.xml -->
    <string name="logout">LOGOUT</string>
    <string name="logout_email">Show useremail</string>
    <string name="logout_username">Show username</string>
    <string name="logout_account">MY ACCOUNT</string>
    <string name="logout_facebook">SYNC WITH FACEBOOK EVENTS</string>

    <!-- activity_picture.xml -->
    <string name="picture_caption">Caption</string>
    <string name="picture_empty">Empty</string>
    <string name="no_picture_label">No image added yet</string>

    <!-- activity_register.xml -->
    <string name="register_username">Username</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_button">REGISTER</string>
    <string name="register_login">Already registered? Login here.</string>

    <!-- fragment_listfragment.xml-->
    <string name="no_appointment_label">No event to display</string>

    <!-- fragment_import_external.xml-->
    <string name="facebook_import">Facebook Friends\' Birthday Import</string>
    <string name="nus_timetable_import">NUS Timetable Import</string>

    <!-- cloudant details -->

    <string name="default_user">cloudant_account_name</string>
    <string name="default_dbname">fetch_authentication</string>
    <string name="default_api_key">api_key</string>
    <string name="default_api_password">api_password</string>

    <string name="cloudant_api_key">API Key</string>
    <string name="cloudant_api_password">API Password</string>
    <string name="cloudant_username">Cloudant user name</string>
    <string name="cloudant_database_name">Cloudant db name</string>

    <string name="cloudant_replicate_api_key">The api key used to replicate to/from your cloudant account.</string>
    <string name="cloudant_replicate_api_password">The api password used to replicate to/from your cloudant account.</string>
    <string name="cloudant_url_username">You cloudant user name, and it is also used to determine your cloudant server url.</string>
    <string name="cloudant_replication_database_name">You cloudant db name, and this is the db used in replication.</string>

</resources>
