<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloudy">

    <com.facebook.login.widget.LoginButton
        xmlns:fb="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_button_size"
        android:layout_gravity="center_horizontal"
        fb:login_text="@string/login_desc"
        fb:logout_text="@string/logout_desc"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textStyle="bold"
        android:textSize="@dimen/standard_text_size"
        android:id="@+id/logout"
        android:textColor="@color/caldroid_white"
        android:background="@color/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_button_size"
        android:hint="@string/logout_username"
        android:id="@+id/updateuser"
        android:textSize="@dimen/event_text_size"
        android:padding="@dimen/standard_padding_size"
        android:layout_marginBottom="@dimen/standard_margin_size"
        android:gravity="center_vertical"
        android:background="@color/caldroid_white"
        android:layout_below="@+id/useremail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_button_size"
        android:id="@+id/useremail"
        android:hint="@string/logout_email"
        android:gravity="center_vertical"
        android:textSize="@dimen/event_text_size"
        android:padding="@dimen/standard_padding_size"
        android:layout_marginBottom="@dimen/standard_margin_size"
        android:background="@color/caldroid_white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_button_size"
        android:hint="@string/logout_account"
        android:id="@+id/account"
        android:textSize="@dimen/event_text_size"
        android:textStyle="bold"
        android:padding="@dimen/standard_padding_size"
        android:gravity="center_vertical"
        android:background="@color/caldroid_transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/event_button_size"
        android:hint="@string/logout_facebook"
        android:id="@+id/textView"
        android:textSize="@dimen/event_text_size"
        android:textStyle="bold"
        android:padding="@dimen/standard_padding_size"
        android:gravity="center_vertical"
        android:background="@color/caldroid_transparent"
        android:layout_below="@+id/updateuser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>